--- a/SchoolOfScience/SchoolOfScience.xcodeproj/xcshareddata/xcschemes/SchoolOfScience.xcscheme
+++ b/SchoolOfScience/SchoolOfScience.xcodeproj/xcshareddata/xcschemes/SchoolOfScience.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "CD3033C9229BA10E0060E356"
+               BuildableName = "SchoolOfScienceUITests.xctest"
+               BlueprintName = "SchoolOfScienceUITests"
+               ReferencedContainer = "container:SchoolOfScience.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
